--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,46 @@
+# Created by https://www.gitignore.io/api/ocaml,macos,scheme,windows,assembler,visualstudiocode
+# Edit at https://www.gitignore.io/?templates=ocaml,macos,scheme,windows,assembler,visualstudiocode
+
+### Assembler ###
+*.exe
+*.o
+*.obj
+*.bc
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### OCaml ###
 *.annot
 *.cmo
 *.cma
 *.cmi
 *.a
-*.o
 *.cmx
 *.cmxs
 *.cmxa
@@ -21,3 +58,62 @@ setup.log
 
 # Merlin configuring file for Vim and Emacs
 .merlin
+
+# Dune generated files
+*.install
+
+# Local OPAM switch
+_opam/
+
+# Esy-related generated files
+_esy/
+_build.prev/
+node_modules/
+
+### Scheme ###
+*.ss~
+*.ss#*
+.#*.ss
+
+*.scm~
+*.scm#*
+.#*.scm
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# End of https://www.gitignore.io/api/ocaml,macos,scheme,windows,assembler,visualstudiocode
