--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,26 @@
-# Created by https://www.gitignore.io/api/ocaml,macos,scheme,windows,assembler,visualstudiocode
-# Edit at https://www.gitignore.io/?templates=ocaml,macos,scheme,windows,assembler,visualstudiocode
+# Created by https://www.gitignore.io/api/ocaml,linux,macos,scheme,windows,assembler,visualstudiocode
+# Edit at https://www.gitignore.io/?templates=ocaml,linux,macos,scheme,windows,assembler,visualstudiocode
 
 ### Assembler ###
 *.exe
 *.o
 *.obj
 *.bc
+
+### Linux ###
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
 
 ### macOS ###
 # General
@@ -116,4 +131,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/ocaml,macos,scheme,windows,assembler,visualstudiocode
+# End of https://www.gitignore.io/api/ocaml,linux,macos,scheme,windows,assembler,visualstudiocode
